testdata/zkc/invalid/basic_invalid_08.zkc
;;error:3:12-13:unexpected token
function f(u8 x) -> (u8 r) {
  r = (x + )
  return
}
